fix: correct PWA icons and manifest
- Fix icon sizes (192x192 and 512x512 square)
- Remove maskable purpose to fix installability warnings
- Add screenshots for rich PWA install UI
- Update manifest with proper configuration

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,13 +13,29 @@
       "src": "/logo/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/logo/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/screenshots/desktop.png",
+      "sizes": "1920x1080",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "MBKM Undip Dashboard - Desktop View"
+    },
+    {
+      "src": "/screenshots/mobile.png",
+      "sizes": "390x844",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "MBKM Undip Dashboard - Mobile View"
     }
   ],
   "categories": ["education", "productivity"],
